[gd_scene load_steps=12 format=3 uid="uid://b0l6ei5ndoyaa"]

[ext_resource type="Script" path="res://gui/voices/SiOPMVoiceDeck.gd" id="1_wt3dc"]
[ext_resource type="PackedScene" uid="uid://dgr0kta03k8ic" path="res://gui/components/knobs/RollerKnob.tscn" id="2_e6f5v"]
[ext_resource type="PackedScene" uid="uid://duig5v2saqys2" path="res://gui/components/deck/VoiceDeckHeader.tscn" id="2_m5l5p"]
[ext_resource type="Shader" path="res://gui/components/knobs/RollerPanel.gdshader" id="3_lcelt"]
[ext_resource type="Script" path="res://gui/components/AdvancedPanelContainer.gd" id="5_1q57h"]
[ext_resource type="PackedScene" uid="uid://dunu7j0jh1pne" path="res://gui/components/deck/VoiceOperatorsHeader.tscn" id="6_blmx3"]
[ext_resource type="PackedScene" uid="uid://y6raidijduyh" path="res://gui/voices/operators/SiOPMOperatorDeck.tscn" id="7_frxll"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hbpl3"]
resource_local_to_scene = true
shader = ExtResource("3_lcelt")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3vtae"]
resource_local_to_scene = true
shader = ExtResource("3_lcelt")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kysg8"]
resource_local_to_scene = true
shader = ExtResource("3_lcelt")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mgqde"]
resource_local_to_scene = true
shader = ExtResource("3_lcelt")

[node name="SiOPMVoiceDeck" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"BaseVoiceDeck"
script = ExtResource("1_wt3dc")

[node name="Layout" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="VoiceHeader" parent="Layout" instance=ExtResource("2_m5l5p")]
unique_name_in_owner = true
layout_mode = 2
voice_name = "SiOPM"

[node name="GeneralKnobs" type="HBoxContainer" parent="Layout"]
layout_mode = 2

[node name="VolumeKnob" parent="Layout/GeneralKnobs" instance=ExtResource("2_e6f5v")]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_hbpl3")
layout_mode = 2
size_flags_horizontal = 3
text = "VOL"
knob_value = 75
max_value = 100
safe_max_value = 100

[node name="FeedbackKnob" parent="Layout/GeneralKnobs" instance=ExtResource("2_e6f5v")]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_3vtae")
layout_mode = 2
size_flags_horizontal = 3
text = "FBACK"

[node name="AlgorithmKnob" parent="Layout/GeneralKnobs" instance=ExtResource("2_e6f5v")]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_kysg8")
layout_mode = 2
size_flags_horizontal = 3
text = "ALGO"

[node name="AdvancedPanelContainer" type="PanelContainer" parent="Layout/GeneralKnobs"]
layout_mode = 2
theme_type_variation = &"AdvancedPanelContainer"
script = ExtResource("5_1q57h")

[node name="ConnectionsKnob" parent="Layout/GeneralKnobs/AdvancedPanelContainer" instance=ExtResource("2_e6f5v")]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_mgqde")
layout_mode = 2
text = "FCONN"

[node name="OperatorSeparator" type="HSeparator" parent="Layout"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="OperatorsHeader" parent="Layout" instance=ExtResource("6_blmx3")]
unique_name_in_owner = true
layout_mode = 2
operator_count = 1

[node name="Operators" type="TabContainer" parent="Layout"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
current_tab = 0

[node name="A" parent="Layout/Operators" instance=ExtResource("7_frxll")]
layout_mode = 2
metadata/_tab_index = 0

[node name="B" parent="Layout/Operators" instance=ExtResource("7_frxll")]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="C" parent="Layout/Operators" instance=ExtResource("7_frxll")]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="D" parent="Layout/Operators" instance=ExtResource("7_frxll")]
visible = false
layout_mode = 2
metadata/_tab_index = 3
